--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.10",
     "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.4",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.42",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-lottie": "^1.2.10",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
-    "typescript": "4.7.3",
-    "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "typescript": "4.7.3"
   },
   "scripts": {
     "dev": "next dev",
